// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator all props & tokens 1`] = `
<View
  style={
    {
      "borderColor": "red",
      "borderLeftWidth": 15,
    }
  }
/>
`;

exports[`Separator default 1`] = `
<View
  style={
    {
      "borderTopWidth": 1,
    }
  }
/>
`;
